[package]
name = "escvpnet"
version = "0.3.0"
authors = ["Télégicloétrocongélateur <telegicloetrocongelateur@gmail.com"]
edition = "2021"
rust-version = "1.68.2"
description = "ESC/VP.net protocol library"
license = "MIT"
license-file = "LICENSE.txt"
repository = "https://github.com/telegicloetroncongelateur/escvpnet"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[tests]
